2009-09-28  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fix Coverity-found issues.

	* src/hd-backgrounds.c (volume_pre_unmount_cb): Check if
	gnome_vfs_volume_monitor_get_volume_for_path returns NULL. 
	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_init): Fix D-Bus
	connection code to make Coverity happy.

2009-09-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.47
	* configure.ac: 0.3.47

2009-09-16  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#134673 - Add link dialog shows bookmarks that are not in
	bookmarks

	* src/hd-bookmark-manager.c (hd_bookmark_manager_add_bookmark_item,
	  free_bookmark_item, hd_bookmark_manager_parse_bookmark_files,
	  hd_bookmark_manager_bookmark_files_changed): Add support for
	  isDeleted flag. Fixes memory leak.

2009-09-16  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#138801 - Crash : hildon-home-74E6 observed

	* src/hd-incoming-events.c (hd_incoming_events_notified): Use
	g_signal_connect_object instead of g_signal_connect.

	* debian/changelog: Update.

2009-09-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.46
	* configure.ac: 0.3.46

2009-09-08  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#133861 - Led blinking for new sms/chat messages is not
	stopped when task switcher is opened

	* src/hd-incoming-events.c: Use Multi map for unperceived
	notifications to fix proper display of led pattern and disable led
	pattern as soon as task switcher is opened.

	* src/hd-multi-map.c (added):
	* src/hd-multi-map.h (added): Add multi map implementation.

	* src/hd-led-pattern.c (added):
	* src/hd-led-pattern.h (added): Add led pattern class.

	* src/Makefile.am: Add new files.

	* debian/changelog: Update.

2009-08-28  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.45
	* configure.ac: 0.3.45

2009-08-27  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#135486 - Logical string 'home_ti_select_shortcut' in layout
	mode (langauge: finnish)
